# weather_util_test_1_1

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
src/terminal/: mod.rs
src/terminal/app/: mod.rs
