[package]
name = "weather_util_test_1_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
anyhow = "1.0.8"
weather_util_rust = "0.16.10"
assert_cmd = "2.0"
log = "0.4"
tokio = "1.33.0"
dotenvy = "0.15.7"
envy = "0.4.2"